--- a/gae/app.yaml
+++ b/gae/app.yaml
@@ -5,6 +5,8 @@ api_version: 1
 threadsafe: true
 
 handlers:
+- url: /static
+  static_dir: static
 - url: /tasks/.*
   script: hn-archive.cron_app
   login: admin
